Экспорт/импорт описания автомата в файл amx (xml по структуре) Добавлен класс MachineDescription для сериализации/десериализации описания автомата и для создания модели автомата

--- a/AbstractMachines/AbstractMachines.csproj
+++ b/AbstractMachines/AbstractMachines.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MealyMachine.cs" />
     <Compile Include="MooreMachine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StateChangedEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
