--- a/AbstractMachineControl/AbstractMachineControl.csproj
+++ b/AbstractMachineControl/AbstractMachineControl.csproj
@@ -69,6 +69,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="XML\MachineDescription.cs" />
+    <Compile Include="XML\Output.cs" />
+    <Compile Include="XML\Transition.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
@@ -78,6 +81,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
