--- a/StateMachineModeling/StateMachineModeling.csproj
+++ b/StateMachineModeling/StateMachineModeling.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Stateless, Version=2.5.62.0, Culture=neutral, PublicKeyToken=93038f0927583c9a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Stateless.2.5.62.0\lib\portable-net40+sl50+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10\Stateless.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -65,6 +69,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -82,6 +87,10 @@
     <ProjectReference Include="..\AbstractMachineControl\AbstractMachineControl.csproj">
       <Project>{4c093286-e266-4be8-85d0-f86c9eabf670}</Project>
       <Name>AbstractMachineControl</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AbstractMachines\AbstractMachines.csproj">
+      <Project>{6a8e5ac3-573e-48bd-95b5-9c17dfb444bf}</Project>
+      <Name>AbstractMachines</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
